# rag-agentic

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py
backend/: .env.example  pyproject.toml
backend/api/: main.py
backend/reports/: RAGAS_EVALUATION.md  ragas_question_bank.json  ragas_report.json
backend/scripts/: evaluate.py
backend/src/: bootstrap.py
backend/tests/: conftest.py  test_agent_langchain_tools.py  test_api_upload.py  test_core_config_contracts.py  test_db_vector_search.py  test_e2e_document_access.py  test_evaluation_ragas.py  test_integration_document_access.py  test_llm_client.py  test_orchestration_pipeline.py  test_pipeline.py  test_ragas_comprehensive.py  test_reasoner.py  test_services_reasoner.py  test_services_trace_store.py  test_services_upload.py  test_vector_db_hybrid.py
backend/ui_streamlit/: app.py
data/: benchmark.json
docs/: phase-gates.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: rag-app.e2e.spec.ts
scripts/: evaluate_ragas.py
src/: __init__.py  bootstrap.py  config.py  llm_client.py  models.py  prompts.py  reasoner.py  trace_store.py  upload_service.py
src/agent/: tools.py
src/agentic_rag/: __init__.py  bootstrap.py  config.py  ingestion.py  models.py  pipeline.py  retrieval.py  trace_store.py
src/core/: config.py  models.py  prompts.py
tests/: test_api_observability_and_continuity.py  test_bootstrap.py  test_llm_client.py  test_phase1_quality_contracts.py  test_pipeline.py  test_upload_api.py  test_upload_service.py
ui/: app.py
(+40 files in other folders)
