[project]
name = "agentic-rag"
version = "0.1.0"
description = "Interview-focused Agentic RAG with traceability and safe-fail behavior"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.82",
    "fastapi>=0.135.3",
    "langchain>=1.2.14",
    "langchain-ollama>=0.3.10",
    "langgraph>=1.1.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "ragas>=0.4.3",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.42.0",
    "botocore[crt]>=1.42.82",
    "qdrant-client>=1.17.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.4",
  "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
